--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ venv37/
 virtualenv/
 data/
 models/
+target/
+
 
 *__pycache__/
 *.pytest_cache/
@@ -35,3 +37,4 @@ scala_study/.metals/
 models/
 .clj-kondo/
 .lsp/
+*.lock
