include .swp in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,8 @@ venv37/
 virtualenv/
 data/
 models/
-<<<<<<< HEAD
 node_modules/
-=======
 target/
-
->>>>>>> 87ad67fda4bfcfa185d00a48e61e92944fe382c8
 
 *__pycache__/
 *.pytest_cache/
@@ -43,3 +39,4 @@ models/
 .clj-kondo/
 .lsp/
 *.lock
+*.swp
