--- a/cpp_study/C_course/220511_01_large_integer_implemetation/Makefile
+++ b/cpp_study/C_course/220511_01_large_integer_implemetation/Makefile
@@ -11,11 +11,13 @@ large_integer.o: large_integer.c
 testing.o: testing.c
 	$(CC) -g -c testing.c -I .
 
+
 test_comparison_u128: test_comparison_u128.o large_integer.o testing.o
 	$(CC) -g test_comparison_u128.o large_integer.o testing.o -o test
 
 test_comparison_u128.o: tests/test_comparison_u128.c 
 	$(CC) -g -c tests/test_comparison_u128.c -I .
+
 
 test_add_subtract_u128: test_add_subtract_u128.o large_integer.o testing.o
 	$(CC) -g test_add_subtract_u128.o large_integer.o testing.o -o test
@@ -23,17 +25,26 @@ test_add_subtract_u128: test_add_subtract_u128.o large_integer.o testing.o
 test_add_subtract_u128.o: tests/test_add_subtract_u128.c 
 	$(CC) -g -c tests/test_add_subtract_u128.c -I .
 
+
 test_bool_operators_u128: test_bool_operators_u128.o large_integer.o testing.o
 	$(CC) -g test_bool_operators_u128.o large_integer.o testing.o -o test
 
 test_bool_operators_u128.o: tests/test_bool_operators_u128.c 
 	$(CC) -g -c tests/test_bool_operators_u128.c -I .
 
+
 test_increment_decrement_u128: test_increment_decrement_u128.o large_integer.o testing.o
 	$(CC) -g test_increment_decrement_u128.o large_integer.o testing.o -o test
 
 test_increment_decrement_u128.o: tests/test_increment_decrement_u128.c 
 	$(CC) -g -c tests/test_increment_decrement_u128.c -I .
+
+
+test_mult_div_u128: test_mult_div_u128.o large_integer.o testing.o
+	$(CC) -g test_mult_div_u128.o large_integer.o testing.o -o test
+
+test_mult_div_u128.o: tests/test_mult_div_u128.c 
+	$(CC) -g -c tests/test_mult_div_u128.c -I .
 
 
 clean:
