docker study tutorial techwithnana

--- a/docker_kubernetes_study/220622_01/techworld-js-docker-demo-app/mongo-node.yaml
+++ b/docker_kubernetes_study/220622_01/techworld-js-docker-demo-app/mongo-node.yaml
@@ -1,27 +1,23 @@
 version: '3'
 services:
-  # my-app:
-  # image: ${docker-registry}/my-app:1.0
-  # ports:
-  # - 3000:3000
-  mongodb:
+  my-node-app:
+    image: 613363943992.dkr.ecr.sa-east-1.amazonaws.com/my-node-app:1.0
+    # image: my-node-app:1.0
+    ports:
+      - 3000:3000
+  my-mongodb:
     image: mongo
     ports:
       - 27017:27017
-    environment:
+    environment:    
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_ROOT_PASSWORD=password
-    volumes:
-      - mongo-data:/data/db
-  mongo-express:
+  my-mongo-express:
     image: mongo-express
     restart: always # fixes MongoNetworkError when mongodb is not ready when mongo-express starts
     ports:
       - 8080:8081
-    environment:
+    environment:    
+      - ME_CONFIG_MONGODB_SERVER=my-mongodb
       - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
       - ME_CONFIG_MONGODB_ADMINPASSWORD=password
-      - ME_CONFIG_MONGODB_SERVER=mongodb
-volumes:
-  mongo-data:
-    driver: local
