--- a/jenkins_course/221008_01/docker-compose.yaml
+++ b/jenkins_course/221008_01/docker-compose.yaml
@@ -3,6 +3,8 @@ services:
   jenkins:
     container_name: jenkins
     image: jenkins/jenkins
+    # build:
+    #   context: .
     ports:
       - "8080:8080"
     volumes:
