--- a/airflow_study/udemy-marc-lamberti/230424/.vscode/settings.json
+++ b/airflow_study/udemy-marc-lamberti/230424/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
 	"python.linting.mypyEnabled": true,
 	"python.linting.enabled": true,
-	"python.formatting.provider": "black",
-	"cSpell.words": ["xcom"]
+	"python.formatting.provider": "none",
+	"cSpell.words": [
+		"xcom"
+	],
+	"[python]": {
+		"editor.defaultFormatter": "ms-python.black-formatter"
+	}
 }
