--- a/airflow_study/udemy-marc-lamberti/230424/.vscode/settings.json
+++ b/airflow_study/udemy-marc-lamberti/230424/.vscode/settings.json
@@ -3,6 +3,8 @@
 	"python.linting.enabled": true,
 	"python.formatting.provider": "none",
 	"cSpell.words": [
+		"subdag",
+		"subdags",
 		"xcom"
 	],
 	"[python]": {
