--- a/airflow_study/udemy-marc-lamberti/230515/mnt/airflow/airflow.cfg
+++ b/airflow_study/udemy-marc-lamberti/230515/mnt/airflow/airflow.cfg
@@ -593,11 +593,11 @@ smtp_host = smtp.gmail.com
 smtp_starttls = True
 smtp_ssl = False
 # Example: smtp_user = airflow
-smtp_user = marclamberti.ml@gmail.com
+smtp_user = wllmszk@gmail.com
 # Example: smtp_password = airflow
-smtp_password = bczorlbxywmojogg
+smtp_password = ********************
 smtp_port = 587
-smtp_mail_from = marclamberti.ml@gmail.com
+smtp_mail_from = wllmszk@gmail.com
 smtp_timeout = 30
 smtp_retry_limit = 5
 
