experiment with AWS EB and docker-compose build

--- a/aws_study/230803_elastic_beanstalk/02_python_flask/my-elastic-beanstalk-app-2/docker-compose.yml
+++ b/aws_study/230803_elastic_beanstalk/02_python_flask/my-elastic-beanstalk-app-2/docker-compose.yml
@@ -4,6 +4,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: 'williamszk/getting-started:latest'
+    # image: 'williamszk/getting-started:latest'
     ports:
       - '80:5000'
